Sun Oct 18 12:58:15 2015  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: Specify frozen_string_literal: true.

Sun Oct 18 11:22:52 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* dln.c: remove defined(__WATCOMC__).

Sun Oct 18 11:16:33 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/mkmf.rb: Good-by Borland-C.

Sun Oct 18 11:04:36 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* numeric.c: Good-by Borland-C.
	* include/ruby/backward/rubyio.h: ditto.
	* include/ruby/backward/st.h: ditto.
	* include/ruby/backward/util.h: ditto.
	* include/ruby/backward/rubysig.h: ditto.
	* include/ruby/backward/classext.h: ditto.
	* dln.c: ditto.
	* gc.c: ditto.
	* win32/resource.rb: ditto.
	* win32/dir.h: ditto.
	* ext/tk/tcltklib.c: ditto.
	* NEWS: announce that Borland-C is no longer supported.

Sun Oct 18 10:54:52 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* dln.c: simplify #ifdef. _WIN32 and __CYGWIN__ are exclusive.
	  see include/ruby/defines.h
	* gc.c: ditto.
	* ext/sdbm/_sdbm.c: ditto.

Sun Oct 18 10:42:19 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ruby.c (open_load_file): add a comment.

Sun Oct 18 10:12:46 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* file.c (rb_file_identical_p): simplify ifdefs

Sun Oct 18 10:01:40 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ChangeLog: Good-bye OS/2.
	* common.mk: ditto.
	* configure.in: ditto.
	* dln_find.c: ditto.
	* ext/Setup.emx: ditto.
	* ext/extmk.rb: ditto.
	* ext/socket/extconf.rb: ditto.
	* ext/zlib/extconf.rb: ditto.
	* file.c: ditto.
	* include/ruby/defines.h: ditto.
	* io.c: ditto.
	* lib/mkmf.rb: ditto.
	* missing/os2.c: ditto.
	* process.c: ditto.
	* ruby.c: ditto.
	* NEWS: announce OS/2 is no longer supported.

Sun Oct 18 08:50:15 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/defines.h (DOSISH): add comments.

Sun Oct 18 08:26:51 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
